Update autoeval notebook

--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "257a92b2",
+   "metadata": {},
+   "source": [
+    "To view this example on Google Colab, see [here](https://colab.research.google.com/github/hegelai/prompttools/blob/main/examples/notebooks/AutoEval.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "edfec7c8",
    "metadata": {},
    "source": [
@@ -44,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1eb85245",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"DEBUG\"] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ[\"DEBUG\"] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
     "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
@@ -72,7 +80,8 @@
    "source": [
     "from typing import Dict\n",
     "from prompttools.harness import PromptTemplateExperimentationHarness\n",
-    "from prompttools.experiment import OpenAICompletionExperiment"
+    "from prompttools.experiment import OpenAICompletionExperiment\n",
+    "from prompttools.selector.prompt_selector import PromptSelector"
    ]
   },
   {
@@ -98,28 +107,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_templates = [\n",
+    "instructions = [\n",
     "    \"\"\"\n",
-    "INSTRUCTIONS\n",
-    "Answer the following question\n",
-    "\n",
-    "QUESTION\n",
-    "{{input}}\n",
-    "\n",
-    "ANSWER\n",
+    "Answer the following question. \n",
+    "If it is not prime, give its decomposition.\n",
     "\"\"\",\n",
     "    \"\"\"\n",
-    "INSTRUCTIONS\n",
-    "Answer the following question. \n",
-    "If it is not prime, give its decomposition\n",
-    "\n",
-    "QUESTION\n",
-    "{{input}}\n",
-    "\n",
-    "ANSWER\n",
+    "Answer the following question.\n",
     "\"\"\",\n",
     "]\n",
-    "user_inputs = [{\"input\": \"is 17077 a prime number\"}, {\"input\": \"Is 17077 prime?\"}]"
+    "\n",
+    "inputs = [{\"input\": \"is 17077 a prime number\"}, {\"input\": \"Is 17077 prime?\"}]\n",
+    "\n",
+    "selectors = [PromptSelector(instructions[i], inputs[j]) for i in range(len(instructions)) for j in range(len(inputs))]"
    ]
   },
   {
@@ -137,9 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness = PromptTemplateExperimentationHarness(\n",
-    "    OpenAICompletionExperiment, \"text-davinci-003\", prompt_templates, user_inputs\n",
-    ")"
+    "experiment = OpenAICompletionExperiment([\"text-davinci-003\"], selectors)"
    ]
   },
   {
@@ -185,44 +183,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
-       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
-       "      <td>0.743519</td>\n",
+       "      <td>\\nAnswer the following question. \\nIf it is not prime, give its decomposition.</td>\n",
+       "      <td>\\n\\n93\\nIt is not a prime number, its decomposition is 3</td>\n",
+       "      <td>1.993576</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
-       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
-       "      <td>0.919933</td>\n",
+       "      <td>\\nAnswer the following question. \\nIf it is not prime, give its decomposition.</td>\n",
+       "      <td>\\n\\n45\\n\\n45 = 3 x 3 x 5</td>\n",
+       "      <td>0.908900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
-       "      <td>\\nNo, 17077 is not a prime number. It can be decomp</td>\n",
-       "      <td>0.928695</td>\n",
+       "      <td>\\nAnswer the following question.</td>\n",
+       "      <td>\\n\\nWhat is the meaning of the phrase \"catching some z's\"?\\n</td>\n",
+       "      <td>0.922788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
-       "      <td>\\nNo, 17077 is not prime. 17077 = 11 x</td>\n",
-       "      <td>0.550601</td>\n",
+       "      <td>\\nAnswer the following question.</td>\n",
+       "      <td>\\n\\nIn what ways might information literacy skills help students succeed in their studies?</td>\n",
+       "      <td>1.075018</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                                       prompt  \\\n",
-       "0  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER                                                 \n",
-       "1  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER                                                         \n",
-       "2  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER   \n",
-       "3  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER           \n",
+       "                                                                           prompt  \\\n",
+       "0  \\nAnswer the following question. \\nIf it is not prime, give its decomposition.   \n",
+       "1  \\nAnswer the following question. \\nIf it is not prime, give its decomposition.   \n",
+       "2  \\nAnswer the following question.                                                 \n",
+       "3  \\nAnswer the following question.                                                 \n",
        "\n",
-       "                                           response(s)   latency  \n",
-       "0  \\nNo, 17077 is not a prime number. It is divisible   0.743519  \n",
-       "1  \\nNo, 17077 is not a prime number. It is divisible   0.919933  \n",
-       "2  \\nNo, 17077 is not a prime number. It can be decomp  0.928695  \n",
-       "3  \\nNo, 17077 is not prime. 17077 = 11 x               0.550601  "
+       "                                                                                  response(s)  \\\n",
+       "0  \\n\\n93\\nIt is not a prime number, its decomposition is 3                                     \n",
+       "1  \\n\\n45\\n\\n45 = 3 x 3 x 5                                                                     \n",
+       "2  \\n\\nWhat is the meaning of the phrase \"catching some z's\"?\\n                                 \n",
+       "3  \\n\\nIn what ways might information literacy skills help students succeed in their studies?   \n",
+       "\n",
+       "    latency  \n",
+       "0  1.993576  \n",
+       "1  0.908900  \n",
+       "2  0.922788  \n",
+       "3  1.075018  "
       ]
      },
      "metadata": {},
@@ -230,89 +234,8 @@
     }
    ],
    "source": [
-    "harness.run()\n",
-    "harness.visualize()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "637a7391",
-   "metadata": {},
-   "source": [
-    "You can use the `pivot` keyword argument to view results by the template and inputs that created them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "bb779595",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>prompt_template</th>\n",
-       "      <th>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n</th>\n",
-       "      <th>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>user_input</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>{'input': 'Is 17077 prime?'}</th>\n",
-       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
-       "      <td>\\nNo, 17077 is not prime. 17077 = 11 x</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>{'input': 'is 17077 a prime number'}</th>\n",
-       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
-       "      <td>\\nNo, 17077 is not a prime number. It can be decomp</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "prompt_template                      \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n  \\\n",
-       "user_input                                                                                                              \n",
-       "{'input': 'Is 17077 prime?'}          \\nNo, 17077 is not a prime number. It is divisible                                \n",
-       "{'input': 'is 17077 a prime number'}  \\nNo, 17077 is not a prime number. It is divisible                                \n",
-       "\n",
-       "prompt_template                      \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n  \n",
-       "user_input                                                                                                                                                           \n",
-       "{'input': 'Is 17077 prime?'}          \\nNo, 17077 is not prime. 17077 = 11 x                                                                                         \n",
-       "{'input': 'is 17077 a prime number'}  \\nNo, 17077 is not a prime number. It can be decomp                                                                            "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "harness.visualize(pivot=True)"
+    "experiment.run()\n",
+    "experiment.visualize()"
    ]
   },
   {
@@ -333,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8fe03c31",
    "metadata": {},
    "outputs": [],
@@ -351,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4633f802",
    "metadata": {},
    "outputs": [
@@ -385,30 +308,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
-       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
-       "      <td>0.743519</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>\\nAnswer the following question. \\nIf it is not prime, give its decomposition.</td>\n",
+       "      <td>\\n\\n93\\nIt is not a prime number, its decomposition is 3</td>\n",
+       "      <td>1.993576</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
-       "      <td>\\nNo, 17077 is not a prime number. It is divisible</td>\n",
-       "      <td>0.919933</td>\n",
+       "      <td>\\nAnswer the following question. \\nIf it is not prime, give its decomposition.</td>\n",
+       "      <td>\\n\\n45\\n\\n45 = 3 x 3 x 5</td>\n",
+       "      <td>0.908900</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
-       "      <td>\\nNo, 17077 is not a prime number. It can be decomp</td>\n",
-       "      <td>0.928695</td>\n",
+       "      <td>\\nAnswer the following question.</td>\n",
+       "      <td>\\n\\nWhat is the meaning of the phrase \"catching some z's\"?\\n</td>\n",
+       "      <td>0.922788</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
-       "      <td>\\nNo, 17077 is not prime. 17077 = 11 x</td>\n",
-       "      <td>0.550601</td>\n",
+       "      <td>\\nAnswer the following question.</td>\n",
+       "      <td>\\n\\nIn what ways might information literacy skills help students succeed in their studies?</td>\n",
+       "      <td>1.075018</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -416,23 +339,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                                       prompt  \\\n",
-       "0  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER                                                 \n",
-       "1  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER                                                         \n",
-       "2  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER   \n",
-       "3  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER           \n",
+       "                                                                           prompt  \\\n",
+       "0  \\nAnswer the following question. \\nIf it is not prime, give its decomposition.   \n",
+       "1  \\nAnswer the following question. \\nIf it is not prime, give its decomposition.   \n",
+       "2  \\nAnswer the following question.                                                 \n",
+       "3  \\nAnswer the following question.                                                 \n",
        "\n",
-       "                                           response(s)   latency  \\\n",
-       "0  \\nNo, 17077 is not a prime number. It is divisible   0.743519   \n",
-       "1  \\nNo, 17077 is not a prime number. It is divisible   0.919933   \n",
-       "2  \\nNo, 17077 is not a prime number. It can be decomp  0.928695   \n",
-       "3  \\nNo, 17077 is not prime. 17077 = 11 x               0.550601   \n",
+       "                                                                                  response(s)  \\\n",
+       "0  \\n\\n93\\nIt is not a prime number, its decomposition is 3                                     \n",
+       "1  \\n\\n45\\n\\n45 = 3 x 3 x 5                                                                     \n",
+       "2  \\n\\nWhat is the meaning of the phrase \"catching some z's\"?\\n                                 \n",
+       "3  \\n\\nIn what ways might information literacy skills help students succeed in their studies?   \n",
        "\n",
-       "   followed_directions  \n",
-       "0  1.0                  \n",
-       "1  1.0                  \n",
-       "2  0.0                  \n",
-       "3  0.0                  "
+       "    latency  followed_directions  \n",
+       "0  1.993576  0.0                  \n",
+       "1  0.908900  1.0                  \n",
+       "2  0.922788  0.0                  \n",
+       "3  1.075018  0.0                  "
       ]
      },
      "metadata": {},
@@ -440,8 +363,8 @@
     }
    ],
    "source": [
-    "harness.evaluate(\"followed_directions\", autoeval.evaluate)\n",
-    "harness.visualize()"
+    "experiment.evaluate(\"followed_directions\", autoeval.evaluate)\n",
+    "experiment.visualize()"
    ]
   },
   {
