Add colab link to GPT4 regression testing

--- a/examples/notebooks/GPT4RegressionTesting.ipynb
+++ b/examples/notebooks/GPT4RegressionTesting.ipynb
@@ -15,7 +15,9 @@
    "source": [
     "Did GPT-4 get worse? Run this notebook to find out.\n",
     "\n",
-    "We'll use a structured output validation to compare the most recent version of GPT-4 to older frozen versions on a few tasks."
+    "We'll use a structured output validation to compare the most recent version of GPT-4 to older frozen versions on a few tasks.\n",
+    "\n",
+    "If you want to run this notebook in Google Colab, see [here](https://colab.research.google.com/github/hegelai/prompttools/blob/main/examples/notebooks/GPT4RegressionTesting.ipynb)"
    ]
   },
   {
