Update HF example with colab

--- a/examples/notebooks/HuggingFaceHub.ipynb
+++ b/examples/notebooks/HuggingFaceHub.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4f5f049f",
+   "metadata": {},
+   "source": [
+    "If you want to view this example in Google Colab, see [here](https://colab.research.google.com/github/hegelai/prompttools/blob/main/examples/notebooks/HuggingFaceHub.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "623f0cfe",
    "metadata": {},
    "source": [
